# MultiPOS-Management

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt
backend/: .dockerignore  Dockerfile  Makerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250611_init.py  9575b60fb4da_re_init_db_schema.py  c0a483277e06_initial_clean_schema.py  dde21febb66f_database_updated.py
backend/app/: .env.docker  DockerFile  backend_pre_start.py  crud.py  database.py  initial_data.py  main.py  schemas.py
backend/app/api/: dependencies.py  deps.py  main.py  utils.py
backend/app/api/routes/: log_routes.py  login.py  people_routes.py  private.py  product_routes.py  purchase_routes.py  sale_routes.py  supplier_routes.py
backend/app/api/routes/finance/: finance_routes.py
backend/app/api/routes/management/: area.py  employee.py  user.py
backend/app/api/routes/operation/: customer_routes.py  product_routes.py
backend/app/api/routes/operation/product/: category.py  product.py
backend/app/api/routes/operation/stock/: movement.py
backend/app/core/: config.py  database.py  init_db.py  security.py
backend/app/crud/: area.py  deps.py  finance_crud.py  management_crud.py  operation_crud.py  people_crud.py  product_crud.py
backend/app/dto/crud/: deps.py  finance_crud.py  management_crud.py  operation_crud.py
backend/app/dto/models/: models.py
backend/app/dto/schemas/finance/: cash_schema.py
backend/app/dto/schemas/management/: unit_schema.py
backend/app/dto/schemas/operation/: product_schema.py  stock_schema.py
backend/app/models/: area.py  deps.py  finance.py  inventory.py  log.py  people.py  product.py  purchase.py  sale.py  supplier.py  utils.py
backend/app/models/finance/: bill_invoice.py  cash.py  payment.py
backend/app/models/management/: __init__.py  purchase.py  sale.py  unit.py
backend/app/models/operation/: bill_invoice.py  product.py  purchase.py  sale.py  stock.py
backend/app/schemas/: finance_schema.py  inventory_schema.py  people_schema.py  product_schema.py  utils.py
backend/app/schemas/management/: unit_schema.py
backend/app/schemas/operation/: product_schema.py  stock_schema.py
backend/scripts/: entrypoint.sh
frontend/: .biome.json  Dockerfile  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/.husky/: pre-commit
frontend/.tanstack/tmp/: 3e548067-9271028e43365e2539af16f4934ffb65  eeef3b8f-6c3069b207fbaa37c9a9d64f1d7834cc
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: custom-client.ts
frontend/src/client/schemas/: areaCreate.ts  areaCreateLocation.ts  areaCreateOwnerId.ts  areaDetails.ts  areaDetailsCreatedAt.ts  areaDetailsLocation.ts  areaDetailsOwnerId.ts  areaRead.ts  areaReadLocation.ts  areaReadOwnerId.ts  areaUpdate.ts  areaUpdateLocation.ts  areaUpdateName.ts  bodyAuthLogin.ts  bodyAuthLoginClientId.ts  bodyAuthLoginClientSecret.ts  bodyAuthLoginGrantType.ts  categoriesDeleteParams.ts  categoriesFetchAllParams.ts  employeeCreate.ts  employeeCreateLastName.ts  employeeRead.ts  employeeReadLastName.ts  employeeReadUserId.ts  employeeUpdate.ts  employeeUpdateAdress.ts  employeeUpdateFirstName.ts  employeeUpdateLastName.ts  employeeUpdatePhone.ts  (+114 more)
frontend/src/components/: CustomNavLink.tsx  card-title.tsx  color-scheme-toggler.tsx  customNotification.tsx  link-chip.tsx  page-header.tsx  page.tsx  table-container.tsx  underline-shape.tsx
frontend/src/config/: config.ts  paths.ts  roles.ts
frontend/src/contexts/: SidebarContext.ts
frontend/src/guards/: Admin-guard.tsx  auth-guest.tsx  guest-gard.tsx
frontend/src/hooks/: useAuth.ts  useAuthContext.ts
frontend/src/layouts/: lazy-page.tsx
frontend/src/mocks/: browser.ts  elogeMockDevTools.tsx  move-mocks.ts
frontend/src/provider/: AppRouteProvider.tsx  CustomProvider.tsx  auth-provider.tsx  authContext.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/utilities/: form.ts  handleError.ts  utils.ts
scripts/: delete-generate-client.sh  generate-client.sh  start-docker.ps1
(+93 files in other folders)
