[project]
name = "tantana-boutik"
version = "0.1.0"
description = "back end of multi-POS management"
authors = [
    {name = "Brillant Eloge",email = "indriantsilazo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.11,<3.13"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120