[project]
name = "Tantana-boutik"
version = "0.1.0"
description = "back end of multi-POS management"
authors = [
    {name = "Brillant Eloge",email = "indriantsilazo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.11,<3.14"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bcrypt<4.1",
    "cachetools==6.1.0",
    "certifi==2025.7.14",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "cssselect==1.3.0",
    "cssutils==2.11.1",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "emails==0.6",
    "fastapi[standard] >=0.116,<0.117",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonschema==4.25.0",
    "jsonschema-pydantic==0.6",
    "jsonschema-specifications==2025.4.1",
    "lxml==6.0.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "passlib==1.7.4",
    "premailer==3.10.0",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "rsa==4.9.1",
    "sentry-sdk==2.33.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0,<2.1",
    "starlette==0.47.2",
    "tenacity==9.1.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "uvicorn>=0.35,<0.36",
    
]

[tool.uv]
dev-dependencies = [
    "black==25.1.0",
    "click==8.2.1", # utilité pour black
    "iniconfig==2.1.0", #utilité pour pytest
    "loguru==0.7.3", # log utilisé par uv: très puissant mais trop verbeux pour la prod
    "pathspec==0.12.1", # utilité pour pre-commit, black
    "platformdirs==4.4.0", # utilité pour black, mypy, pytest
    "pluggy==1.6.0", # utilité pour pytest, mypy
    "pytest<8.4.2,>=7.4.3",
    "pytest-asyncio==1.1.0",
    "pygments==2.19.2", # utilité pour black (coloratin syntaxique)
    "more-itertools==10.7.0", # utilité pour pytest
    "mypy<2.0.0,>=1.8.0",
    "mypy-extensions==1.1.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "win32-setctime==1.2.0", # utilité pour pytest sous Windows
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true